Fri May 27 11:31:51 2011  misfo <tedwardo2@gmail.com>

	* lib/rexml/text.rb (REXML::Text#initialize): prevent an error
	  when passing a frozen string to REXML::Text.new

	  dup the string passed in instead of cloning so that it's frozen
	  state is ignored

Sun May 22 07:10:25 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* test/openssl/test_pkey_dsa.rb: Add tests for sign/verify.

Thu May 19 07:47:26 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* test/openssl/test_pkey_rsa.rb: Add tests for sign/verify.

Wed May 18 20:25:04 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* lib/timeout.rb (Timeout#timeout): don't leak "execution expired"
	  exception. [Bug #4283] [ruby-core:34534].

Wed May 18 03:14:49 2011  Eric Hodel  <drbrain@segment7.net>

	* test/test_singleton.rb:  Add tests from lib/singleton.rb.  Patch by
	  Pete Higgins.  [Ruby 1.9 - Bug #4715]

Tue May 17 20:20:49 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* vm_core.h (rb_thread_struct): add volatile to
	  transition_for_lock because it is not protected by lock.

Sun May 15 21:22:35 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* cont.c (cont_init): clear macihne_stack_start/end of saved thread to
	  prevent mark machine stack of GC'ed Thread. root Fiber is not initialized by
	  fiber_init(). based on a patch by Serge Balyuk [ruby-core:35891] fixes #4612
	* test/ruby/test_fiber.rb (test_gc_root_fiber): add test for it.

Wed May 11 19:45:27 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/forwardable.rb: support 'delegate :foo => :bar' for to meet
	  by specification of RDOC.

Sun May  8 19:39:16 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (native_cond_timedwait): add to care EINTR.
	* thread_pthread.c (thread_timer): remove EINTR check.

Fri May  6 15:01:11 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* ext/syck/rubyext.c (mktime_do): avoid buffer overrun, by
	  silently ignoring lesser significant digits.  Required buffer